# embedding-ft

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
embedding/common/: __init__.py  base_model.py  config.py  heads.py  hf_patch.py  utils.py
embedding/evaluate/: README.md  __init__.py  common_evaluation.py  evaluate_academic_mteb.py  evaluate_litsearch.py  evaluate_qasa.py
embedding/train/: README.md
embedding/train/config/dataset_config/: test1.yaml
embedding/train/config/deepspeed_config/: deepspeed_zero0.yaml  deepspeed_zero2.yaml  deepspeed_zero3.yaml
embedding/train/script/: train.sh  train_sanity_test.sh
embedding/train/src/: __init__.py  merge_peft.py  train.py  utils.py
embedding/train/src/component/: __init__.py  collator.py  loss.py  sampler.py  tokenizer.py  trainer.py
