[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[tool.black]
exclude = '''
(
    embedding/evaluate/external_libs/*
)
'''
line-length = 100

[tool.isort]
skip = ["*/__init__.py"]
skip_glob = ["*/external_libs/*"]
profile = "black"

[tool.pyright]
reportUnboundVariable=false
reportMissingImports=false
reportPrivateImportUsage=false
exclude=["embedding/evaluate/external_libs/*"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "evaluation",
]

[tool.ruff.lint]
select = ["F", "E", "W", "ASYNC", "C4", "DTZ", "INP", "PIE", "PT", "Q", "RSE", "RET", "SLF", "SIM", "ARG", "PTH", "I"]
ignore = ["E203", "E501"]
unfixable = ["F401", "W605"]